--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tabler/icons": "^1.112.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.6.3",
